[project]
name = "mongo-hack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "langchain>=1.2.17",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=1.1.2",
    "langchain-mongodb>=0.5.0",
    "langchain-voyageai>=0.1.4",
    "pymongo>=4.10",
    "python-dotenv>=1.0.1",
]
